control-plane/gitops/argocd/bootstrap/apps/infrastructure/istio/peer-authentication.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default
  namespace: istio-system
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  mtls:
    mode: STRICT
